# SDL3_msvc_template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_flags.txt  justfile
src/: main.cpp  template.justfile
